2008-07-23  Matthias Clasen  <mclasen@redhat.com>

	544088 – option_test_LDADD is left in tests/Makefile.am

	* tests/Makefile.am: Remove leftovers. 
	Noticed by Hiroyuki Ikezoe

2008-07-22  Mathias Hasselmann  <mathias@openismus.com>

	Set LANG variable for group caption tests to get reproducable results.

	* glib/tests/option-context.c (group_captions()):
	  Set LANG variable to C in the forked process to get reproducable.
	  Don't silence the forked process in --verbose mode to support
	  debugging.

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Fix detection of struct statfs fields.

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.4 ===

	* configure.in: Bump version

	* NEWS: Updates

2008-07-21  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gtimer.c (g_time_val_to_iso8601): Use the right format
	string to get leading zeros when converting to ISO 8601. (Sven
	Herzberg)

2008-07-21  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gbookmarkfile.c:
	(bookmark_app_info_new): Do not set the timestamp value
	using time(), as it will be overwritten anyway. (#535223,
	Michael Meeks)

	(parse_application_element),
	(bookmark_app_info_dump): Support the "modified" attribute,
	which takes an ISO-formatted string instead of a Unix time
	stamp, to keep the number of g_strdup_printf() calls to a
	minimum.

	* glib/gtimer.c:
	(g_time_val_to_iso8601): Do not use strftime(): we know
	the format and contents of the ISO 8601 date format we
	use.

	* tests/bookmarks/valid-03.xbel: Add a test file for the
	modified attribute.

2008-07-19  Matthias Clasen  <mclasen@redhat.com>

	* glib/tests/Makefile.am:
	* glib/tests/array-test.c: Move array tests here.

	* tests/Makefile.am:
	* tests/array-test.c: Removed.

2008-07-20  Tor Lillqvist  <tml@novell.com>

	* glib/giowin32.c (g_io_win32_prepare): Patch from Yu Kuan that